force-app/main/default/objects/TimeEntry__c/fields/Status_Keeper__c.field-meta.xml
<CustomField>
    <fullName>Status_Keeper__c</fullName>
    <defaultValue>&apos;Approved&apos;</defaultValue>
    <label>Status Keeper</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>