force-app/main/default/objects/TimeEntry__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Holiday</fullName>
            </value>
            <value>
                <fullName>Work Hours</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Paid Vacation</fullName>
            </value>
            <value>
                <fullName>Sickness / Accident</fullName>
            </value>
            <value>
                <fullName>Parental Leave</fullName>
            </value>
            <value>
                <fullName>Unpaid Leave</fullName>
            </value>
            <value>
                <fullName>Approved paid absence</fullName>
            </value>
            <value>
                <fullName>Paid Education</fullName>
            </value>
            <value>
                <fullName>Child Sickness / Accident</fullName>
            </value>
            <value>
                <fullName>Absence</fullName>
                <isActive>false</isActive>
                <label>Absence</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Vacation</fullName>
                <isActive>false</isActive>
                <label>Vacation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>