force-app/main/default/objects/TimeEntry__c/validationRules/TE01_Location_must_be_set.validationRule-meta.xml
<ValidationRule>
    <fullName>TE01_Location_must_be_set</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Location__c)</errorConditionFormula>
    <errorDisplayField>Location__c</errorDisplayField>
    <errorMessage>TE01: Location must be set for Time Entry</errorMessage>
</ValidationRule>