force-app/main/default/objects/TimeEntry__c/validationRules/TE02_Type_must_be_set.validationRule-meta.xml
<ValidationRule>
    <fullName>TE02_Type_must_be_set</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(Type__c))</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>TE02: Type must be set for Time Entry</errorMessage>
</ValidationRule>