force-app/main/default/objects/TimeEntry__c/validationRules/TE03_Employee_must_be_set_non_Holiday.validationRule-meta.xml
<ValidationRule>
    <fullName>TE03_Employee_must_be_set_non_Holiday</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	NOT(ISBLANK(TEXT(Type__c))),
	TEXT(Type__c) != &apos;Holiday&apos;,
	ISBLANK(Employee__c)
)</errorConditionFormula>
    <errorDisplayField>Employee__c</errorDisplayField>
    <errorMessage>TE03: Employee must be set for non-Holiday Time Entry</errorMessage>
</ValidationRule>