force-app/main/default/objects/TimeEntry__c/validationRules/TE04_Status_must_be_set.validationRule-meta.xml
<ValidationRule>
    <fullName>TE04_Status_must_be_set</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Status__c)</errorConditionFormula>
    <errorMessage>TE04: Status must be set for Time Entry</errorMessage>
</ValidationRule>