force-app/main/default/objects/TimeEntry__c/validationRules/TE05_Employee_must_be_empty_Holiday.validationRule-meta.xml
<ValidationRule>
    <fullName>TE05_Employee_must_be_empty_Holiday</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	TEXT(Type__c) = &apos;Holiday&apos;,
	NOT(ISBLANK(Employee__c))
)</errorConditionFormula>
    <errorDisplayField>Employee__c</errorDisplayField>
    <errorMessage>TE05: Employee must be empty for Holiday Time Entry</errorMessage>
</ValidationRule>