force-app/main/default/objects/TimeEntry__c/validationRules/TE06_Existing_Type_can_not_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>TE06_Existing_Type_can_not_be_changed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 NOT(ISNEW()),
 ISCHANGED(Type__c)
)</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>TE06: Type can not be changed for existing Time Entry</errorMessage>
</ValidationRule>