force-app/main/default/objects/TimeEntry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>From__c</columns>
    <columns>To__c</columns>
    <columns>Type__c</columns>
    <columns>Hours__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>